<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExploreFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="416dp"
        android:layout_height="210dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/d3dc7e93893bd4ad5d73009f763e4a48" />

    <TextView
        android:id="@+id/textView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/montserrat_black"
        android:gravity="center|center_horizontal"
        android:text="Explore Events"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="297dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/searchbar_bg"
        android:queryHint="Search Here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView01">

    </SearchView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/montserrat_black"
        android:text="From"
        android:textColor="@color/orange_theme"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:fontFamily="@font/montserrat_black"
        android:text="Event Date"
        android:textColor="@color/orange_theme"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_black"
        android:text="To"
        android:textColor="@color/orange_theme"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/endDate"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="yyyy-mm-dd"
        android:inputType="date"
        android:paddingStart="12dp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/endDate"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:background="@drawable/edit_text_rounded"
        android:ems="10"
        android:hint="yyyy-mm-dd"
        android:inputType="date"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="Search By Date"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startDate" />

    <ImageView
        android:id="@+id/image_music"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="27dp"
        android:width="64dp"
        android:height="64dp"
        android:scaleType="fitCenter"
        app:layout_column="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_art"
        app:srcCompat="@drawable/icons8_classic_music_96" />

    <ImageView
        android:id="@+id/image_outdoor"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:width="64dp"
        android:height="64dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/image_music"
        app:layout_constraintTop_toTopOf="@+id/image_art"
        app:srcCompat="@drawable/icons8_outdoor_swimming_pool_96" />

    <ImageView
        android:id="@+id/image_food"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="32dp"
        android:width="64dp"
        android:height="64dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/image_outdoor"
        app:layout_constraintTop_toTopOf="@+id/image_art"
        app:srcCompat="@drawable/icons8_pizza_96" />

    <ImageView
        android:id="@+id/image_art"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="32dp"
        android:width="64dp"
        android:height="64dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/image_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:srcCompat="@drawable/icons8_picture_96" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="Arts"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/image_art"
        app:layout_constraintTop_toBottomOf="@+id/image_art" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="Food"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/image_food"
        app:layout_constraintTop_toBottomOf="@+id/image_food" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="Outdoor"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/image_outdoor"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="Music"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/image_music"
        app:layout_constraintTop_toTopOf="@+id/textView6" />


</androidx.constraintlayout.widget.ConstraintLayout>